--- a/index.html
+++ b/index.html
@@ -120,7 +120,8 @@
     </div>
 
     <script>
-        const ws = new WebSocket(`ws://${window.location.host}/ws`);
+        const protocol = window.location.protocol === 'https:' ? 'wss:' : 'ws:';
+        const ws = new WebSocket(`${protocol}//${window.location.host}/ws`);
         const numberEl = document.getElementById('number');
         let reconnectAttempts = 0;
 
